Add example of Grid Section with Header

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="navigation_item1_sub1">Section with Header</string>
     <string name="navigation_item1_sub2">Section with Header and Footer</string>
     <string name="navigation_item1_sub3">Expandable Section</string>
+    <string name="navigation_item1_sub4">Grid Section with Header</string>
     <string name="navigation_item2">Stateful Section</string>
     <string name="navigation_item2_sub1">Section with Header and Footer</string>
 
@@ -18,6 +19,10 @@
     <string name="tech_topic">Technology</string>
     <string name="sports_topic">Sports</string>
 
+    <string name="top_rated_movies_topic">Top Rated Movies</string>
+    <string name="most_popular_movies_topic">Most Popular Movies</string>
+
+    <string name="more">MORE</string>
     <string name="see_more">See more..</string>
     <string name="failed_load">Failed to load, tap to try again.</string>
 
