Add expandable grid section example; Display titles on toolbar;

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,13 +6,14 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="navigation_item1">Stateless Section</string>
-    <string name="navigation_item1_sub1">Section with Header</string>
-    <string name="navigation_item1_sub2">Section with Header and Footer</string>
-    <string name="navigation_item1_sub3">Expandable Section</string>
-    <string name="navigation_item1_sub4">Grid Section with Header</string>
-    <string name="navigation_item2">Stateful Section</string>
-    <string name="navigation_item2_sub1">Section with Header and Footer</string>
+    <string name="nav_stateless">Stateless Section</string>
+    <string name="nav_example1">Section with Header</string>
+    <string name="nav_example2">Section with Header and Footer</string>
+    <string name="nav_example4">Expandable Section</string>
+    <string name="nav_example5">Grid Section with Header</string>
+    <string name="nav_example6">Expandable Grid Section</string>
+    <string name="nav_stateful">Stateful Section</string>
+    <string name="nav_example3">Section with Header and Footer</string>
 
     <string name="world_topic">World</string>
     <string name="biz_topic">Business</string>
