--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,8 +17,7 @@
     <string name="nav_example7">SearchView with Sections</string>
     <string name="nav_stateful">Stateful Section</string>
     <string name="nav_example3">Section with Header and Footer</string>
-    <string name="nav_animation">Animations</string>
-    <string name="nav_example8">Section with Header</string>
+    <string name="nav_example8">Animations</string>
 
     <string name="world_topic">World</string>
     <string name="biz_topic">Business</string>
