--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="failed_load">Failed to load, tap to try again.</string>
 
     <string name="add">ADD</string>
+    <string name="clear">CLEAR</string>
     <string name="add_group">ADD GROUP</string>
 
 </resources>
