--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="nav_stateful">Stateful Section</string>
     <string name="nav_example3">Section with Header and Footer</string>
     <string name="nav_example8">Animations</string>
+    <string name="nav_example9">Multiple Item ViewHolders</string>
 
     <string name="world_topic">World</string>
     <string name="biz_topic">Business</string>
