--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="nav_example6">Expandable Grid Section</string>
     <string name="nav_example7">SearchView with Sections</string>
     <string name="nav_example8">Animations</string>
+    <string name="nav_example9">Payloads</string>
 
     <string name="action_search">Search</string>
 
@@ -20,6 +21,7 @@
     <string name="cd_movie_icon">Movie icon</string>
     <string name="cd_cloud_crossed">Cloud crossed icon</string>
     <string name="cd_arrow_icon">Arrow icon</string>
+    <string name="cd_currency_icon">Currency icon</string>
 
     <string name="world_topic">World</string>
     <string name="biz_topic">Business</string>
@@ -38,5 +40,11 @@
     <string name="add">ADD</string>
     <string name="clear">CLEAR</string>
     <string name="add_group">ADD GROUP</string>
+
+    <string name="my_portfolio">MY PORTFOLIO</string>
+    <string name="watchlist">WATCHLIST</string>
+    <string name="coin">COIN</string>
+    <string name="holdings">HOLDINGS</string>
+    <string name="price">PRICE</string>
 
 </resources>
