--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,10 +36,16 @@
     <string name="more">MORE</string>
     <string name="see_more">See more..</string>
     <string name="failed_load">Failed to load, tap to try again.</string>
+    <string name="empty_list">This list is empty.</string>
 
     <string name="add">ADD</string>
     <string name="clear">CLEAR</string>
-    <string name="add_group">ADD GROUP</string>
+    <string name="remove">REMOVE</string>
+    <string name="loaded">LOADED</string>
+    <string name="loading">LOADING</string>
+    <string name="failed">FAILED</string>
+    <string name="empty">EMPTY</string>
+    <string name="cd_add_group">Add group</string>
 
     <string name="my_portfolio">MY PORTFOLIO</string>
     <string name="watchlist">WATCHLIST</string>
